--- a/painting/Properties/launchSettings.json
+++ b/painting/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -12,6 +12,7 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
+        "key": "14OGzuak",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
