--- a/XUnitTestProject1/TestPaintings.csproj
+++ b/XUnitTestProject1/TestPaintings.csproj
@@ -5,8 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="data.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="image.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="RichardSzalay.MockHttp" Version="1.5.0" />
+    <PackageReference Include="WorldDomination.HttpClient.Helpers" Version="79.0.0-dev" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
