--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,41 @@
-/painting/obj
-/painting/bin
-/XUnitTestProject1/obj
-/XUnitTestProject1/bin
+*.obj
+*.pdb
+*.user
+*.aps
+*.pch
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.suo
+*.tlb
+*.tlh
+*.bak
+*.cache
+*.ilk
+*.log
+*.lib
+*.sbr
+*.scc
+[Bb]in
+[Dd]ebug*/
+obj/
+[Rr]elease*/
+_ReSharper*/
+*.[Pp]ublish.xml
+*.resharper*
+AppData/
+App_Data/
+*.log.*
+[Ll]ogs/
+[Pp]ackages/
+[Tt]humbs.db
+[Tt]est[Rr]esult*
+[Bb]uild[Ll]og.*
+*.sln.DotSettings.*
+*.ncrunchproject
+*.ncrunchsolution
+*.nupkg
+.vs
+*.orig
