--- a/tests/Painting.Website.Tests/Painting.Website.Tests.csproj
+++ b/tests/Painting.Website.Tests/Painting.Website.Tests.csproj
@@ -17,8 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-    <PackageReference Include="RichardSzalay.MockHttp" Version="1.5.0" />
-    <PackageReference Include="WorldDomination.HttpClient.Helpers" Version="79.0.0-dev" />
+    <PackageReference Include="Shouldly" Version="2.8.2" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
