--- a/src/Painting.Website/Painting.Website.csproj
+++ b/src/Painting.Website/Painting.Website.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="1.1.0" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.6.1" />
     <PackageReference Include="RichardSzalay.MockHttp" Version="1.5.0" />
     <PackageReference Include="WorldDomination.HttpClient.Helpers" Version="79.0.0-dev" />
   </ItemGroup>
