--- a/src/Painting.Website/appveyor.yml
+++ b/src/Painting.Website/appveyor.yml
@@ -4,11 +4,11 @@ image: Visual Studio 2017
 
 install:
 
-- ps: dotnet sources add -Name roelo -Source https://www.myget.org/F/pk-development/api/v2
+- ps: nuget sources add -Name roelo -Source https://www.myget.org/F/pk-development/api/v2
 
 before_build:
 
-- ps: dotnet restore
+- ps: nuget restore
 
 test_script:
 - dotnet test .\tests\Painting.Website.Tests.csproj
